--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ JWT_SECRET=your-secret-key
 # Thesis Auth Server URL
 THESIS_AUTH_SERVER_URL=
 
-# Run Mode (DEV, PROD) 
+# Run Mode (DEV, PROD)
 RUN_MODE=DEV
 
 
@@ -23,3 +23,5 @@ S3_BUCKET=
 S3_REGION=
 S3_ACCESS_KEY_ID=
 S3_SECRET_ACCESS_KEY=
+
+MCP_CONNECTION_DEFAULT_TIMEOUT=300
