--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,12 @@ services:
     image: edoburu/pgbouncer
 
     environment:
-      - DB_USER=$POSTGRES_USER
-      - DB_PASSWORD=$POSTGRES_PASSWORD
-      - DB_HOST=postgres
-      - DB_NAME=$POSTGRES_DB
+      - DB_USER=$PGBOUNCER_DB_USER
+      - DB_PASSWORD=$PGBOUNCER_DB_PASSWORD
+      - DB_HOST=$PGBOUNCER_DB_HOST
+      - DB_NAME=$PGBOUNCER_DB_NAME
       - POOL_MODE=transaction
-      - ADMIN_USERS=postgres,$POSTGRES_USER
+      - ADMIN_USERS=postgres,$PGBOUNCER_DB_USER
       - MAX_CLIENT_CONN=100
       - DEFAULT_POOL_SIZE=20
       - MIN_POOL_SIZE=0
@@ -46,7 +46,7 @@ services:
           "CMD",
           "pg_isready",
           "-U",
-          "${POSTGRES_USER}",
+          "${PGBOUNCER_DB_USER}",
           "-h",
           "postgres",
           "-p",
