--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,7 @@ opentelemetry-instrumentation-urllib3 = "0.46b0"
 pip = "^25.0.1"
 aiofiles = "^24.1.0"
 tritonclient = { extras = ["http"], version = "^2.56.0" }
+opentelemetry-instrumentation-psycopg = "0.46b0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.11.5"
@@ -148,6 +149,7 @@ gevent = "^24.2.1"
 
 [tool.coverage.run]
 concurrency = ["gevent"]
+
 
 
 [tool.poetry.group.runtime.dependencies]
@@ -177,6 +179,7 @@ ignore = ["D1"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
+
 
 
 [tool.poetry.group.evaluation.dependencies]
